test/interpreter/error/err_04_heap_exhausted.pl0
program heapexhausted;
var p;
begin
  while 1=1 do new(p, 1000);
end